# ttgacronymbot

./: .env.example  .gitignore  LICENSE  README.md  acronyms.json  acronyms.jsonc  pyproject.toml
src/ttgacronymbot/: acronyms.py  bot.py  config.py  main.py
tests/: test_acronyms.py  test_bot.py
