[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttgacronymbot"
version = "0.1.0"
description = "A Reddit bot that explains acronyms on r/TheTowerGame."
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
ttgacronymbot = "ttgacronymbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ttgacronymbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
